# inventory-app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 207aaed68472_add_category_usage_manufacturer_to_items.py
sql/: 001_init.sql
src/inventory_app/: app.py  db.py  http.py  models.py
src/inventory_app/routes/: __init__.py  items.py  stocks.py  stocktakes.py  suggestions.py
src/inventory_app/schemas/: items.py  stocktakes.py
src/inventory_app/services/: __init__.py  inventory.py
src/inventory_app/static/: app.js  stocktake.js
src/inventory_app/templates/: item_transactions.html  items.html  layout.html  stocks.html  stocktake_detail.html  stocktakes.html
src/inventory_app/ui/: __init__.py  routes.py
